Fixed spacing on image previews

--- a/src/Components/Gallery/preview.css
+++ b/src/Components/Gallery/preview.css
@@ -1,11 +1,15 @@
 .PreviewWrapper
 {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
+
+    -moz-box-sizing: border-box; 
+     -webkit-box-sizing: border-box; 
+      box-sizing: border-box;
 }
 .OpaqueBackground
 {
@@ -45,13 +49,25 @@
 }
 .ImagePreview .LabelBackground
 {
+    display: flex;
+    justify-content: center;
     position: absolute;
     background-color: black;
-    padding: 1em;
+    padding: 1em 0;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
 }
-.ImagePreview .LabelBG label
+.ImagePreview .LabelBackground label
 {
+    width: 100%;
+    flex-shrink: 0;
     color: white;
+}
+@media screen and (max-width:992px) {
+    .Close
+    {
+        width: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
