--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 
 html, body {
   height: 100%;
-  width:100%;
+  min-height: -webkit-fill-available;
+  width:100vw;
   overflow-x:hidden;
   background-color: #333;
 }
